--- a/wp-content/themes/lillimo/style.css
+++ b/wp-content/themes/lillimo/style.css
@@ -1,7 +1,7 @@
-@import "https://github.com/SkyDreazz/SkyDreazz.github.io/wp-content/themes/lillimo/css/components/header.css";
-@import "https://github.com/SkyDreazz/SkyDreazz.github.io/wp-content/themes/lillimo/css/components/annonces.css";
-@import "https://github.com/SkyDreazz/SkyDreazz.github.io/wp-content/themes/lillimo/css/components/page.css";
-@import "https://github.com/SkyDreazz/SkyDreazz.github.io/wp-content/themes/lillimo/css/components/footer.css";
+@import "https://SkyDreazz.github.io/wp-content/themes/lillimo/css/components/header.css";
+@import "https://SkyDreazz.github.io/wp-content/themes/lillimo/css/components/annonces.css";
+@import "https://SkyDreazz.github.io/wp-content/themes/lillimo/css/components/page.css";
+@import "https://SkyDreazz.github.io/wp-content/themes/lillimo/css/components/footer.css";
 
 /*!
 Theme Name: Lill\'Imo
