--- a/wp-content/themes/lillimo/css/components/header.css
+++ b/wp-content/themes/lillimo/css/components/header.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Billie Eilish';
-    src: url('https://github.com/SkyDreazz/SkyDreazz.github.io/wp-content/themes/lillimo/css/fonts/Billie\ Eilish.otf');
+    src: url('https://SkyDreazz.github.io/wp-content/themes/lillimo/css/fonts/Billie\ Eilish.otf');
 }
 
 * {
