--- a/wp-content/themes/lillimo/css/components/page.css
+++ b/wp-content/themes/lillimo/css/components/page.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Montserrat';
-    src: url('https://github.com/SkyDreazz/SkyDreazz.github.io/wp-content/themes/lillimo/css/fonts/Montserrat-Bold.ttf');
+    src: url('https://SkyDreazz.github.io/wp-content/themes/lillimo/css/fonts/Montserrat-Bold.ttf');
 }
 
 body{
@@ -81,7 +81,7 @@ body{
 .image-entete{
     width: 100%;
     height: 25vh;
-    background-image: url('https://github.com/SkyDreazz/SkyDreazz.github.io/wp-content/themes/lillimo/images/lillimo1.png');
+    background-image: url('https://SkyDreazz.github.io/wp-content/themes/lillimo/images/lillimo1.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
